Tests/ShouldSucceed/Try47.adl
CONTEXT Proefje

RELATION begintijd[Tijdsleuf*Tijdstip] [UNI,TOT]
RELATION eindtijd[Tijdsleuf*Tijdstip] [UNI,TOT]
SPEC Tijdverantwoordingsregel ISA Tijdsleuf
RELATION werksoort[Tijdverantwoordingsregel*Werksoort]
SPEC Roosterregel ISA Tijdsleuf
RELATION dienst[Roosterregel*Dienstsoort]

RELATION bon[Tijdsleuf*Werkbon]

INTERFACE Werkbon (bon, begintijd, eindtijd, dienst, werksoort) : I[Werkbon]
BOX [ "" : I
    , Roosterregels : bon~;I[Roosterregel]
    , Regels : bon~
      BOX [ "" : I[Roosterregel]
            BOX [ begintijd : begintijd 
                , eindtijd : eindtijd
                , dienst : dienst
                ]
          ]
    , Tijdverantwoordingsregels : bon~;I[Tijdverantwoordingsregel]
    ]

ENDCONTEXT