Tests/ShouldFail/Try48.adl
CONTEXT Proefje IN DUTCH

RELATION begintijd[Tijdsleuf*Tijdstip] [UNI,TOT]
RELATION eindtijd[Tijdsleuf*Tijdstip] [UNI,TOT]
CLASSIFY Tijdverantwoordingsregel ISA Tijdsleuf
RELATION werksoort[Tijdverantwoordingsregel*Werksoort]
CLASSIFY Roosterregel ISA Tijdsleuf
RELATION dienst[Roosterregel*Dienstsoort]

RELATION bon[Tijdsleuf*Werkbon]

INTERFACE Werkbon : I[Werkbon]
BOX [ "" : I
    , Regels : bon~;I[Roosterregel]
      BOX [ begintijd : begintijd 
          , eindtijd : eindtijd
          , dienst : dienst
          , werksoort : werksoort  -- Deze moet worden afgekeurd, omdat de intersectie tussen  niet bestaat.
          ]
    ]

ENDCONTEXT
{- Which ticket covers this issue?
   Purpose: to ensure that "werksoort" on line 18 gets a type error message.
   Result: FAIL
   Reason: the intersection between Roosterregel and Tijdverantwoordingsregel does not exist.
           If the user wants this, (s)he must specify CLASSIFY Combisleuf IS Roosterregel /\ Tijdverantwoordingsregel
   
   Message:
   (Bas, mag jij verzinnen)
-}